--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,8 +124,21 @@ input {
   gap: 1.5rem;
 }
 
+.section {
+  padding-block: 2rem;
+}
+
 .section--lg {
   padding-block: 4rem;
+}
+
+.section__title {
+  font-size: var(--h4-font-size);
+  margin-bottom: 1.5rem;
+}
+
+.section__title span {
+  color: var(--first-color);
 }
 
 .form__input {
@@ -311,12 +324,83 @@ input {
 }
 
 /*=============== CATEGORIES ===============*/
+.categories {
+  overflow: hidden;
+}
+
+.category__item {
+  text-align: center;
+  border: 1px solid var(--border-color);
+  padding: 0.625rem 0.625rem 1.25rem;
+  border-radius: 1.25rem;
+}
+
+.category__img {
+  border-radius: 0.75rem;
+  margin-bottom: 1.25rem;
+}
+
+.category__title {
+  color: var(--text-color);
+  font-size: var(--small-font-size);
+}
 
 /* Swiper class */
+.swiper {
+  overflow: initial;
+}
+
+.swiper-button-next i,
+.swiper-button-prev i {
+  font-size: 1.7rem;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  content: '';
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  top: -1.875rem;
+  background-color: var(--first-color-alt);
+  order: 1px solid var(--border-color);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  color: var(--first-color);
+}
+
+.swiper-button-prev {
+  left: initial;
+  right: 2.5rem;
+}
+
+.swiper-button-next {
+  right: 0;
+}
 
 /*=============== PRODUCTS ===============*/
+.tab__btns {
+  display: flex;
+  column-gap: 0.75rem;
+}
+
+.tab__btn {
+  background-color: var(--container-color);
+  color: var(--title-color);
+  padding: 1rem 1.2rem 0.875rem;
+  border-radius: 0.25rem;
+  font-family: var(--second-font);
+  font-weight: var(--weight-600);
+  cursor: pointer;
+}
 
 /* Active Tab */
+.tab__btn.active-tab {
+  color: var(--first-color);
+  background-color: var(--second-color);
+}
 
 /* Product Hover */
 
