--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,10 +62,10 @@
     --h3-font-size: 1.25rem;
     --h4-font-size: 1.125rem;
     --large-font-size: 1rem;
-    --normal-font-size:0.9375rem ;
+    --normal-font-size: 0.9375rem;
     --small-font-size: 0.8125rem;
     --smaller-font-size: 0.6875rem;
-    --tiny-font-size: 0.625rem; 
+    --tiny-font-size: 0.625rem;
   }
 }
 
@@ -1622,19 +1622,23 @@ button {
 }
 
 @media screen and (max-width: 1200px) {
-  .container{
+  .container {
     max-width: 960px;
   }
-  .header__top{
-    display: none; 
+
+  .header__top {
+    display: none;
   }
-  .nav{
-    height: calc( var(--header-height) + 1.5rem );
+
+  .nav {
+    height: calc(var(--header-height) + 1.5rem);
   }
-  .nav__logo-img{
+
+  .nav__logo-img {
     width: 116px;
   }
-  .nav__menu{
+
+  .nav__menu {
     position: fixed;
     right: 0;
     top: 0;
@@ -1649,17 +1653,21 @@ button {
     row-gap: 2rem;
     box-shadow: 0 0 15px hsla(0, 0%, 0%, 0.1);
   }
-  .nav__list{
+
+  .nav__list {
     order: 1;
     flex-direction: column;
     align-items: flex-start;
     row-gap: 1.5rem;
   }
-  .nav__link{
+
+  .nav__link {
     font-size: var(--large-font-size);
   }
-  .header__search .form__input{
-     border-color: var(--first-color);
+
+  .header__search .form__input {
+    border-color: var(--first-color);
+    font-size: var(--h4-font-size);
   }
 }
 
