--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -244,7 +244,7 @@ button {
 
 .nav,
 .nav__menu,
-.nav___list,
+.nav__list,
 .header__user-actions {
   display: flex;
   align-items: center;
@@ -265,7 +265,7 @@ button {
   margin-left: 2.5rem;
 }
 
-.nav___list {
+.nav__list {
   column-gap: 2.5rem;
   margin-right: auto;
 }
@@ -318,6 +318,10 @@ button {
   font-size: var(--tiny-font-size);
 }
 
+.nav__menu-top,
+.nav__toggle {
+  display: none;
+}
 
 /* Active link */
 .active-link,
@@ -465,7 +469,8 @@ button {
 /*=============== PRODUCTS ===============*/
 .tab__btns {
   display: flex;
-  column-gap: 0.75rem;
+  flex-wrap: wrap;
+  gap: 0.75rem;
   margin-bottom: 2rem;
 }
 
@@ -1002,7 +1007,7 @@ button {
   color: var(--text-color);
   font-size: var(--small-font-size);
   font-weight: var(--weight-700);
-  transition: all 0.15s transition;
+  transition: all 0.15s var(--transition);
 }
 
 .pagination__link.active,
@@ -1327,7 +1332,9 @@ button {
 
 .cart__actions {
   display: flex;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 0.75rem;
   margin-top: 1.5rem;
 }
@@ -1640,7 +1647,7 @@ button {
 
   .nav__menu {
     position: fixed;
-    right: 0;
+    right: -100%;
     top: 0;
     max-width: 400px;
     width: 100%;
@@ -1652,13 +1659,18 @@ button {
     align-items: flex-start;
     row-gap: 2rem;
     box-shadow: 0 0 15px hsla(0, 0%, 0%, 0.1);
+    transition: all 0.25s var(--transition);
+  }
+
+  .show-menu {
+    right: 0;
   }
 
   .nav__list {
     order: 1;
     flex-direction: column;
     align-items: flex-start;
-    row-gap: 1.5rem;
+    row-gap: 2rem;
   }
 
   .nav__link {
@@ -1669,14 +1681,340 @@ button {
     border-color: var(--first-color);
     font-size: var(--h4-font-size);
   }
+
+  .nav__menu-top,
+  .nav__toggle {
+    display: flex;
+  }
+
+  .nav__menu-top {
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 1.25rem;
+  }
+
+  .nav__menu-logo img {
+    width: 100px;
+  }
+
+
+  .nav__close {
+    font-size: var(--h2-font-size);
+    line-height: 1rem;
+
+  }
+
+  .header__action-btn img {
+    width: 21px;
+  }
+
+  .home__container {
+    grid-template-columns: 5.5fr 6.5fr;
+  }
+
+  .countdown {
+    column-gap: 1rem;
+  }
+
+  .countdown__period {
+    width: 36px;
+    height: 36px;
+    line-height: 36px;
+  }
+
+  .countdown__amount::after {
+    right: -30%;
+    top: 14%;
+  }
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    top: -28px;
+    width: 26px;
+    height: 26px;
+  }
+
+  .swiper-button-prev {
+    right: 36px;
+  }
+
+  .account__tab {
+    padding: 0.75rem 1rem;
+  }
+
+  .checkout__group:nth-child(2) {
+    padding: 1.5rem;
+  }
+
+  .details__brand {
+    margin-block: 0.75rem;
+  }
+
+  .details__price {
+    padding-block: 0.75rem;
+  }
+
+  .short__desription {
+    margin-bottom: 1.5rem;
+  }
+
+  .details__color {
+    margin-block: 1.75rem 1.25rem;
+  }
+
+  .details__size {
+    margin-bottom: 2.75rem;
+  }
+
+  .color___link {
+    width: 22px;
+    height: 22px;
+  }
+
+  .size___link {
+    padding: 0.375rem 0.625rem;
+  }
+
+  .details__action {
+    margin-bottom: 2.75rem;
+  }
+
 }
 
 /* For medium devices */
-@media screen and (max-width: 992px) {}
+@media screen and (max-width: 992px) {
+  .container {
+    max-width: 740px;
+  }
 
-@media screen and (max-width: 768px) {}
+  .home__container,
+  .details__container,
+  .checkout__container,
+  .newsletter__container,
+  .accounts__container,
+  .cart__group {
+    grid-template-columns: 1fr;
+  }
+
+  .cart__group {
+    row-gap: 2.75rem;
+  }
+
+  .home__img {
+    justify-self: center;
+  }
+
+  .btn {
+    height: 45px;
+    line-height: 45px;
+  }
+
+  .btn--sm {
+    height: 38px;
+    line-height: 35px;
+  }
+
+  .btn--md {
+    height: 42px;
+    line-height: 39px;
+  }
+
+  .newsletter__description {
+    display: none;
+  }
+
+  .products__container,
+  .showcase__container,
+  .details__container,
+  .footer__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .login,
+  .register {
+    padding: 1.25rem;
+  }
+
+
+
+  .table tr th:nth-child(1),
+  .table tr td:nth-child(1) {
+    width: 140px;
+  }
+
+  .table tr th:nth-child(2),
+  .table tr td:nth-child(2) {
+    width: 330px;
+  }
+
+  .table tr th:nth-child(3),
+  .table tr td:nth-child(3) {
+    width: 80px;
+  }
+
+  .table tr th:nth-child(4),
+  .table tr td:nth-child(4) {
+    width: 160px;
+  }
+
+  .table tr th:nth-child(5),
+  .table tr td:nth-child(5) {
+    width: 160px;
+  }
+
+  .table tr th:nth-child(6),
+  .table tr td:nth-child(6) {
+    width: 100px;
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 540px;
+  }
+
+  .deal__container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .products__container,
+  .showcase__container,
+  .footer__container,
+  .login-register__container,
+  .details__container {
+    grid-template-columns: 100%;
+  }
+
+  .tab__header,
+  .tab__body {
+    padding: 0.75rem;
+  }
+
+  .compare__table tr td {
+    display: block;
+  }
+}
 
 /* For small devices */
-@media screen and (max-width: 576px) {}
+@media screen and (max-width: 576px) {
+  .category__item {
+    padding-bottom: 1rem;
+  }
 
-@media screen and (max-width: 350px) {}
+  .category__img {
+    margin-bottom: 1rem;
+  }
+
+  .deals__item,
+  .checkout__group:nth-child(2) {
+    padding: 1.25rem;
+  }
+
+  .pagination {
+    column-gap: 0.5rem;
+    margin-top: 2.5rem;
+  }
+
+  .pagination__link {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+  }
+
+  .place__order-table th,
+  .order__table th {
+    display: none;
+  }
+
+  .place__order-table tr td,
+  .order__table tr td {
+    display: block;
+  }
+
+  .form__group {
+    grid-template-columns: 1fr;
+  }
+
+  .cart__total {
+    padding: 1.25rem;
+  }
+
+  .payment__methods {
+    margin-block: 2.25rem;
+  }
+
+  .detail__tabs {
+    column-gap: 1.25rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .review__single {
+    column-gap: 1rem;
+  }
+
+  .footer__title {
+    margin-top: 0.25rem;
+  }
+
+  .footer__bottom {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .cart___shipping{
+    width: 96%;
+  }
+
+  .cart___shipping input{
+    
+}
+
+  .cart__coupon {
+    width: 96%;
+  }
+
+  .cart__total {
+    width: 96%;
+  }
+
+}
+
+@media screen and (max-width: 350px) {
+  .action__btn {
+    width: 36px;
+    height: 36px;
+    line-height: 38px;
+  }
+
+  .cart__btn {
+    bottom: 1.4rem;
+    right: 1.25rem;
+  }
+
+  .showcase__item {
+    column-gap: 1rem;
+  }
+
+  .showcase__img {
+    width: 70px;
+  }
+
+  .showcase__content {
+    width: calc(100% - 86px);
+  }
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none;
+  }
+
+  .compare__table tr th,
+  .cart__total-table tr td {
+    display: block;
+    width: 100%;
+  }
+
+
+}
